# linear-attention-jet-classification

./: .gitignore  01_model_training.ipynb  02_analysis_and_results.ipynb  README.md  pyproject.toml  requirements.txt
history/: l2vit_mae_finetuned_history.npy  pretrain_l2vit.npy  pretrain_xcit.npy  swin_scratch_history.npy  xcit_imagenet_history.npy  xcit_mae_finetuned_history.npy  xcit_scratch_history.npy
notebooks/: 01_model_training.ipynb  02_analysis_and_results.ipynb
results/: channel_stats.npy  comparison_table.csv  efficiency_benchmarks.json  final_summary_table.csv  results.json
src/: dataset.py  mae.py  models.py  train.py  utils.py
