[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "linear-attention-jet-classification"
version = "0.1.0"
description = "Linear attention vision transformers for CMS jet classification and mass regression"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "timm>=0.9.0",
    "h5py>=3.8.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.2.0",
    "matplotlib>=3.7.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]
analysis = [
    "fvcore>=0.1.5",
]

[project.urls]
Repository = "https://github.com/nareshmeena12/linear-attention-jet-classification"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]